--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,3 +6,8 @@
     padding: 0.5rem 0;
   }
 }
+img {
+  &.th {
+    margin: 0 10px 0 1px;
+  }
+}
